# jaxamples

./: .gitignore  .pre-commit-config.yaml  README.md  _config.yml  index.md  kill_poetry_processes.sh  pyproject.toml  python-venv
.github/workflows/: ci.yml
docs/: checklist.md
jaxamples/: mnist_benchmark_memory.py  mnist_cnn.py  mnist_cnn_run_onnx.py  mnist_config.py  mnist_data.py  mnist_dinov3.py  mnist_dinov3_run_onnx.py  mnist_example_cli.py  mnist_example_runner.py  mnist_onnx_eval.py  mnist_strong_cnn.py  mnist_strong_cnn_run_onnx.py  mnist_training.py  mnist_vit.py  mnist_vit_augsearch.py  mnist_vit_run_onnx.py  mnist_vit_xsa.py  mnist_vit_xsa_augsearch.py
onnx/: mnist_dinov3_model_config.json  mnist_vit_augsearch_model_config.json  mnist_vit_model_config.json  mnist_vit_xsa_augsearch_model_config.json  mnist_vit_xsa_model_config.json
scripts/: analyze_mnist_inverse_augmentations.py  run_ci_local.sh
tests/: test_mnist_cnn.py  test_mnist_dinov3.py  test_mnist_example_cli.py  test_mnist_onnx_eval.py  test_mnist_strong_cnn.py  test_mnist_vit.py  test_mnist_vit_augsearch.py  test_mnist_vit_main.py  test_mnist_vit_xsa.py
